MOSIP-37256: update readme for release branch (#462)
* MOSIP-37256: update the readme file - develop

Signed-off-by: nagendra0721 <nagendra0718@gmail.com>

* MOSIP-37256: update readme file for develop

Signed-off-by: nagendra0721 <nagendra0718@gmail.com>

* MOSIP-37256: update readme file for develop

Signed-off-by: nagendra0721 <nagendra0718@gmail.com>

* MOSIP-37256: update readme file for develop

Signed-off-by: nagendra0721 <nagendra0718@gmail.com>

* MOSIP-37256: update readme file for release branch

Signed-off-by: nagendra0721 <nagendra0718@gmail.com>

---------

Signed-off-by: nagendra0721 <nagendra0718@gmail.com>